--- a/src/index.css
+++ b/src/index.css
@@ -59,17 +59,21 @@ body {
   background-color: #383A42;
   border-radius: 12px;
   padding: 4px;
+  width: 40px;
+  height: 40px;
 }
 
 .slider-wrap .swiper-button-prev{
   position: absolute;
   left: unset !important;
   top: 24px !important;
-  right: 60px !important;
+  right: 50px !important;
   color:white;
   background-color: #383A42;
   border-radius: 12px;
   padding: 4px;
+  width: 40px;
+  height: 40px;
 }
 
 .slider-wrap .swiper-navigation-icon{
@@ -100,3 +104,16 @@ body {
 .animate-menu {
   animation: menuSlideDown 0.25s ease-out;
 }
+
+@media (max-width: 640px) {
+  .slider-wrap .swiper-button-prev{
+    width: 32px;
+    height: 32px;
+    right: 40px !important;
+  }
+  .slider-wrap .swiper-button-next {
+    width: 32px;
+    height: 32px;
+  }
+}
+
