--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-/* src/index.css or src/App.css */
 @import "tailwindcss";
 
-*{
+* {
   box-sizing: border-box;
 }
 
 @theme {
-  --color-primary: #ffc700; 
+  --color-primary: #ffc700;
   --color-primary-100: #fff3d5;
   --color-primary-200: #ffe8ab;
   --color-primary-300: #ffdd80;
@@ -16,8 +15,8 @@
   --color-primary-700: #917217;
   --color-primary-800: #604b16;
   --color-primary-900: #322811;
- 
-  --color-secondary: #454852; 
+
+  --color-secondary: #454852;
   --color-secondary-100: #d7d7da;
   --color-secondary-200: #b0b1b6;
   --color-secondary-300: #8b8c93;
@@ -30,7 +29,7 @@
 
   --color-tertiary: #2f3547;
 
-  --color-neutral: #ffffff; 
+  --color-neutral: #ffffff;
   --color-neutral-100: #f0f0f0;
   --color-neutral-200: #D2D2D2;
   --color-neutral-300: #b1b1b1;
@@ -41,49 +40,55 @@
   --color-neutral-800: #252525;
   --color-neutral-900: #1f1f1f;
 }
+
 body {
   scrollbar-color: #3f4042 #141415;
-  scrollbar-width:thin /* Optional: Set 
-  scrollbar width */
+  scrollbar-width: thin;
 }
 
 .slider-wrap {
   position: relative;
 }
 
-.slider-wrap .swiper-button-next{
+.slider-wrap .swiper-button-next {
   position: absolute;
   top: 24px !important;
   right: 0 !important;
-  color:white;
-  background-color: #383A42;
+  color: white;
+  background-color: #383a42;
   border-radius: 12px;
   padding: 4px;
   width: 40px;
   height: 40px;
 }
 
-.slider-wrap .swiper-button-prev{
+.slider-wrap .swiper-button-prev {
   position: absolute;
   left: unset !important;
   top: 24px !important;
   right: 50px !important;
-  color:white;
-  background-color: #383A42;
+  color: white;
+  background-color: #383a42;
   border-radius: 12px;
   padding: 4px;
   width: 40px;
   height: 40px;
 }
 
-.slider-wrap .swiper-navigation-icon{
+.slider-wrap .swiper-navigation-icon {
   width: 16px;
   height: 16px;
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: scale(0.95); }
-  to { opacity: 1; transform: scale(1); }
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .animate-fadeIn {
@@ -106,7 +111,7 @@ body {
 }
 
 @media (max-width: 640px) {
-  .slider-wrap .swiper-button-prev{
+  .slider-wrap .swiper-button-prev {
     width: 32px;
     height: 32px;
     right: 40px !important;
@@ -116,4 +121,3 @@ body {
     height: 32px;
   }
 }
-
